# Project metadata is now handled dynamically in setup.py
# This file only contains build system and tool configurations

[build-system]
requires = ["setuptools>=77.0.0", "wheel", "packaging>=24.2", "cmake>=3.25", "scikit-build", "ninja"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "admmsolver>=0.7.7",
    "ipykernel>=6.29.5",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
]